iml-services/iml-device/src/virtual_device/snapshots/iml_device__virtual_device__tests__full_oss_commands_test_4_oss2.local_7.snap
---
source: iml-services/iml-device/src/virtual_device/mod.rs
expression: c
---
{
  "ScsiDevice": {
    "serial": "36001405167b1f82adaa41d8933ab5441",
    "scsi80": "SLIO-ORG ost19           167b1f82-adaa-41d8-933a-b54415547af4",
    "major": "8",
    "minor": "80",
    "devpath": "/devices/platform/host4/session3/target4:0:0/4:0:0:18/block/sdf",
    "size": 5368709120,
    "filesystem_type": "mpath_member",
    "fs_uuid": "6382646711577759851",
    "fs_label": "ost10",
    "paths": [
      "/dev/disk/by-id/scsi-36001405167b1f82adaa41d8933ab5441",
      "/dev/disk/by-id/wwn-0x6001405167b1f82adaa41d8933ab5441",
      "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-18",
      "/dev/disk/by-label/ost10",
      "/dev/disk/by-uuid/6382646711577759851",
      "/dev/sdf"
    ],
    "mount": null,
    "children": [
      {
        "Mpath": {
          "devpath": "/devices/virtual/block/dm-2",
          "serial": "36001405167b1f82adaa41d8933ab5441",
          "scsi80": "SLIO-ORG ost19           167b1f82-adaa-41d8-933a-b54415547af4",
          "dm_name": "mpathk",
          "size": 5368709120,
          "major": "253",
          "minor": "2",
          "filesystem_type": "zfs_member",
          "fs_uuid": "6382646711577759851",
          "fs_label": "ost10",
          "paths": [
            "/dev/mapper/mpathk",
            "/dev/disk/by-id/dm-name-mpathk",
            "/dev/disk/by-id/dm-uuid-mpath-36001405167b1f82adaa41d8933ab5441",
            "/dev/disk/by-label/ost10",
            "/dev/disk/by-uuid/6382646711577759851",
            "/dev/dm-2"
          ],
          "children": [
            {
              "Zpool": {
                "guid": 6382646711577759851,
                "name": "ost10",
                "health": "ONLINE",
                "state": "ACTIVE",
                "size": 5335154688,
                "vdev": {
                  "Root": {
                    "children": [
                      {
                        "Disk": {
                          "guid": 1737577684331262940,
                          "state": "ONLINE",
                          "path": "/dev/mapper/mpathk",
                          "dev_id": "dm-uuid-mpath-36001405167b1f82adaa41d8933ab5441",
                          "phys_path": null,
                          "whole_disk": false,
                          "is_log": false
                        }
                      }
                    ],
                    "spares": [],
                    "cache": []
                  }
                },
                "props": [],
                "children": [
                  {
                    "Dataset": {
                      "guid": 9741200387062756759,
                      "name": "ost10/ost10",
                      "kind": "filesystem",
                      "props": [
                        {
                          "name": "name",
                          "value": "ost10/ost10"
                        },
                        {
                          "name": "type",
                          "value": "filesystem"
                        },
                        {
                          "name": "creation",
                          "value": "1592914503"
                        },
                        {
                          "name": "used",
                          "value": "3625984"
                        },
                        {
                          "name": "available",
                          "value": "5164680704"
                        },
                        {
                          "name": "referenced",
                          "value": "3625984"
                        },
                        {
                          "name": "compressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "mounted",
                          "value": "no"
                        },
                        {
                          "name": "quota",
                          "value": "0"
                        },
                        {
                          "name": "reservation",
                          "value": "0"
                        },
                        {
                          "name": "recordsize",
                          "value": "1048576"
                        },
                        {
                          "name": "mountpoint",
                          "value": "/ost10/ost10"
                        },
                        {
                          "name": "sharenfs",
                          "value": "off"
                        },
                        {
                          "name": "checksum",
                          "value": "on"
                        },
                        {
                          "name": "compression",
                          "value": "off"
                        },
                        {
                          "name": "atime",
                          "value": "on"
                        },
                        {
                          "name": "devices",
                          "value": "on"
                        },
                        {
                          "name": "exec",
                          "value": "on"
                        },
                        {
                          "name": "setuid",
                          "value": "on"
                        },
                        {
                          "name": "readonly",
                          "value": "off"
                        },
                        {
                          "name": "zoned",
                          "value": "off"
                        },
                        {
                          "name": "snapdir",
                          "value": "hidden"
                        },
                        {
                          "name": "aclinherit",
                          "value": "restricted"
                        },
                        {
                          "name": "createtxg",
                          "value": "10"
                        },
                        {
                          "name": "canmount",
                          "value": "off"
                        },
                        {
                          "name": "xattr",
                          "value": "sa"
                        },
                        {
                          "name": "copies",
                          "value": "1"
                        },
                        {
                          "name": "version",
                          "value": "5"
                        },
                        {
                          "name": "utf8only",
                          "value": "off"
                        },
                        {
                          "name": "normalization",
                          "value": "none"
                        },
                        {
                          "name": "casesensitivity",
                          "value": "sensitive"
                        },
                        {
                          "name": "vscan",
                          "value": "off"
                        },
                        {
                          "name": "nbmand",
                          "value": "off"
                        },
                        {
                          "name": "sharesmb",
                          "value": "off"
                        },
                        {
                          "name": "refquota",
                          "value": "0"
                        },
                        {
                          "name": "refreservation",
                          "value": "0"
                        },
                        {
                          "name": "guid",
                          "value": "9741200387062756759"
                        },
                        {
                          "name": "primarycache",
                          "value": "all"
                        },
                        {
                          "name": "secondarycache",
                          "value": "all"
                        },
                        {
                          "name": "usedbysnapshots",
                          "value": "0"
                        },
                        {
                          "name": "usedbydataset",
                          "value": "3625984"
                        },
                        {
                          "name": "usedbychildren",
                          "value": "0"
                        },
                        {
                          "name": "usedbyrefreservation",
                          "value": "0"
                        },
                        {
                          "name": "logbias",
                          "value": "latency"
                        },
                        {
                          "name": "dedup",
                          "value": "off"
                        },
                        {
                          "name": "mlslabel",
                          "value": "none"
                        },
                        {
                          "name": "sync",
                          "value": "standard"
                        },
                        {
                          "name": "dnodesize",
                          "value": "auto"
                        },
                        {
                          "name": "refcompressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "written",
                          "value": "3625984"
                        },
                        {
                          "name": "logicalused",
                          "value": "1835008"
                        },
                        {
                          "name": "logicalreferenced",
                          "value": "1835008"
                        },
                        {
                          "name": "volmode",
                          "value": "default"
                        },
                        {
                          "name": "filesystem_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "filesystem_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapdev",
                          "value": "hidden"
                        },
                        {
                          "name": "acltype",
                          "value": "off"
                        },
                        {
                          "name": "context",
                          "value": "none"
                        },
                        {
                          "name": "fscontext",
                          "value": "none"
                        },
                        {
                          "name": "defcontext",
                          "value": "none"
                        },
                        {
                          "name": "rootcontext",
                          "value": "none"
                        },
                        {
                          "name": "relatime",
                          "value": "off"
                        },
                        {
                          "name": "redundant_metadata",
                          "value": "all"
                        },
                        {
                          "name": "overlay",
                          "value": "off"
                        },
                        {
                          "name": "lustre:fsname",
                          "value": "zfsmo"
                        },
                        {
                          "name": "lustre:index",
                          "value": "10"
                        },
                        {
                          "name": "lustre:mgsnode",
                          "value": "10.73.20.11@tcp:10.73.20.12@tcp"
                        },
                        {
                          "name": "lustre:flags",
                          "value": "34"
                        },
                        {
                          "name": "lustre:version",
                          "value": "1"
                        },
                        {
                          "name": "lustre:svname",
                          "value": "zfsmo-OST000a"
                        },
                        {
                          "name": "lustre:failover.node",
                          "value": "10.73.20.21@tcp"
                        }
                      ],
                      "mount": null
                    }
                  }
                ],
                "mount": {
                  "source": "ost10",
                  "target": "/ost10",
                  "fs_type": "zfs",
                  "opts": "rw,xattr,noacl"
                }
              }
            }
          ],
          "mount": null
        }
      }
    ]
  }
}
